Adding JVM 16 workaround for Alok
See: https://github.com/xtdb/xtdb/issues/1462